tdf#90908 : FILESAVE: XLSX wrong export of font size 18

After roundtrip is font size changed from 18 to 11

Current behavior:
The 'sz' tag was not exported
Expected behaviour:
After RT 'sz' tag should export with value 18

XML Difference :
Original
 <a:rPr lang="en-IN" sz="1800" b="1" i="1" u="sng"/>
Roundtrip
 <a:rPr b="1" i="1" lang="en-IN" strike="noStrike" u="sng">

Change-Id: I7955f89a8db9c18c11546f4c60aa130a0be14bb5